Developed Proposed Method: using Local Planning ~DWA

--- a/docs/iros2024/legibot.tex
+++ b/docs/iros2024/legibot.tex
@@ -29,13 +29,20 @@
 \section{Introduction}
 \input{sections/intro}
 
+\input{sections/contribs.tex}
+%\input{sections/dynamic_legibility}
+
 \section{Related Work}
 \input{sections/related_work}
 
-\section{Method}
-\input{sections/method_1}
+\section{Background}
+\input{sections/background_legibility}
 
-\input{sections/method_2}
+\input{sections/synthesis}
+
+%\section{Method}
+%\input{sections/method_1}
+%\input{sections/method_2}
 
 \section{Experimental Results}
 \input{sections/exp}
@@ -43,7 +50,10 @@
 \section{Conclusion}
 \input{sections/conclusion}
 
-\bibliographystyle{IEEEtran}
+\include{sections/simple_refs}
+
+%\bibliographystyle{IEEEtran}
+\bibliographystyle{plain}
 \bibliography{refs}
 
 \end{document}
