--- a/docs/iros2024/sections/contribs.tex
+++ b/docs/iros2024/sections/contribs.tex
@@ -1,21 +1,4 @@
-%! Author = javad
-%! Date = 28/12/2023
-
-% Preamble
-\documentclass[11pt]{article}
-
-% Packages
-\usepackage{amsmath}
-\usepackage{caption}
-
-\title{Legible Motion for Service Robots}
-
-\author{Javad Amirian}
-
-% Document
-\begin{document}
-
-    \maketitle
+\usepackage{latexsymb}
 
 %    \section{Background}
 %In this paper, we explore the question of whether it is possible to redefine legibility
@@ -122,46 +105,13 @@
     %%%%%%%%%%%%%%%%%%%%
 
 
-    \noindent
-    \subsection{Contrib (3): New metrics}
-
-    \noindent
-    (a) Absolute Envelope of Readiness:
-    We introduce a slight modification to the {envelope of readiness} metric proposed in [REF],
-    since the original metric is bound to a coefficient that is not generalizable to different scenarios.
-    Here, we remove the 5\% tolerance from the metric, and we call it the absolute envelope of readiness.
-
 %    \noindent
-%    (b) ...
-
-%    \section{TODO}
-%    - To improve the robot-restaurants scenario simulation.
-%    - To
-
-%    \subsection{Structure}
-%    In the next section, we review the related work in the field [REF].
-%    Then in section [REF] we propose the aforementioned framework in detail,
-%    and then in section [REF] we explain the experiments we conducted with simulated and real robots
-%     to demonstrate the effectiveness of our proposed methodology in a restaurant scenario.
-
-    \section{References}
-
-    \begin{enumerate}
-        \item Legibility and Predictability of Robot Motion
-        \item Observer-Aware Legibility for Social Navigation
-        \item Generating Legible Motion
-        \item Viewpoint-Based Legibility Optimization
-        \item A new approach to evaluating legibility: Comparing legibility frameworks using framework-independent robot motion trajectories
-        \item A flexible optimization-based method for synthesizing intent-expressive robot arm motion
-        \item A MIP-Based Approach for Multi-Robot Geometric Task-and-Motion Planning
-        \item Wait Wait, Nonverbally Tell Me: Legibility for Use in Restaurant Navigation
-%        \item
-
-    \end{enumerate}
+%    \subsection{Contrib (3): New metrics}
+%
+%    \noindent
+%    (a) Absolute Envelope of Readiness:
+%    We introduce a slight modification to the {envelope of readiness} metric proposed in [REF],
+%    since the original metric is bound to a coefficient that is not generalizable to different scenarios.
+%    Here, we remove the 5\% tolerance from the metric, and we call it the absolute envelope of readiness.
 
 
-%\bibliographystyle{IEEEtran}
-%\bibliography{refs}
-
-
-\end{document}
