comment out old paragraphs

--- a/docs/iros2024/legibot.tex
+++ b/docs/iros2024/legibot.tex
@@ -13,18 +13,18 @@
 \usepackage{lipsum}  % For generating placeholder text, remove in your actual paper
 
 
-
 \begin{document}
 
-\title{Legibot / GenTLEBot: Legible Motions for Service Robots \\ \large by Motion Prediction based on Visual Cues}
-\author{Javad Amirian, Mouad Abrini, Mohamed Chetouani}
+%GenTLEBot
+\title{Legibot: Legible Motions for Service Robots} % \\ \large by Motion Prediction based on Visual Cues}
+\author{Javad Amirian} %, Mouad Abrini, Mohamed Chetouani}
 \maketitle
 
 \begin{abstract}
 \input{sections/abs}
 \end{abstract}
 
-\input{sections/todo}
+%\input{sections/todo}
 
 \section{Introduction}
 \input{sections/intro}
