--- a/docs/iros2024/sections/exp.tex
+++ b/docs/iros2024/sections/exp.tex
@@ -3,7 +3,7 @@ One challenge with computing Optical Flow on simulated frames is that due to the
 
 \subsection{Why restaurants?}
 \noindent
-\hl{Todo:} to read the literature and review
+%\hl{Todo:} to read the literature and review
 
 In fact, robots have been already deployed in restaurants and thousands of them are in place. This type of situation usually contains a certain number of people: clients, waiters, ... . And the people are part of interaction scenarios with the robot(s). The clients might be new to this place and new to facing the robot in this restaurant, which means they wouldn't have a clear idea of the robot's behavior. 
 
