--- a/docs/iros2024/sections/synthesis.tex
+++ b/docs/iros2024/sections/synthesis.tex
@@ -94,4 +94,4 @@ where $\mathrm T^j$ is the transformation matrix from the world frame to the obs
 and $\mathbf{v}_{t:t+dt}(.|\mathrm G^*)$ is the velocity vector of the robot at time $t$,
 Here we compute the optimal paths also by solving Eq. (\ref{eq:cost_general}) for each goal $g$, and
 
-\quote{\hl{Q: Can this be seen as a Dynamic Programming approach to the problem?! Or is it just a greedy approach?}}
+%\quote{\hl{Q: Can this be seen as a Dynamic Programming approach to the problem?! Or is it just a greedy approach?}}
