Doc: Minor improvements

--- a/docs/iros2024/legibot.tex
+++ b/docs/iros2024/legibot.tex
@@ -29,7 +29,6 @@
 \section{Introduction}
 \input{sections/intro}
 
-\input{sections/contribs.tex}
 %\input{sections/dynamic_legibility}
 
 \section{Related Work}
@@ -37,6 +36,7 @@
 
 \section{Background}
 \input{sections/background_legibility}
+\input{sections/contribs.tex}
 
 \input{sections/synthesis}
 
@@ -50,7 +50,7 @@
 \section{Conclusion}
 \input{sections/conclusion}
 
-\include{sections/simple_refs}
+%\include{sections/simple_refs}
 
 %\bibliographystyle{IEEEtran}
 \bibliographystyle{plain}
