--- a/docs/iros2024/sections/intro.tex
+++ b/docs/iros2024/sections/intro.tex
@@ -39,7 +39,8 @@ But, also it can appear in more complex scenarios to respect the social rules in
 %In this work, we propose a new approach for computing the motion legibility.
 %We go beyond the trajectory level computations and propose our method based on visual inputs and semantics information. For this we have studied a short-term motion prediction method and a long-term goal prediction algorithm in an effort to cover the gap in the existing research in addressing the visual inputs of a human observer for computing legibility.
 
-\noindent
+\vspace{0.3cm}
+%\noindent
 \textbf{Structure:}
 In this paper, we explore the question of whether it is possible to redefine legibility by shifting the focus from directly processing the robot's geometric trajectory to using visual inputs.
 This can help us to take one more step toward human-centric robot legible motions.
