Doc: (Proposal): Local Planning + Legibility

--- a/docs/iros2024/legibot.tex
+++ b/docs/iros2024/legibot.tex
@@ -40,6 +40,8 @@
 
 \input{sections/synthesis}
 
+\input{sections/extra}
+
 %\section{Method}
 %\input{sections/method_1}
 %\input{sections/method_2}
