--- a/docs/iros2024/refs.bib
+++ b/docs/iros2024/refs.bib
@@ -1,3 +1,14 @@
+@article{DWA1997,
+  title={The dynamic window approach to collision avoidance},
+  author={Fox, Dieter and Burgard, Wolfram and Thrun, Sebastian},
+  journal={IEEE Robotics \& Automation Magazine},
+  volume={4},
+  number={1},
+  pages={23--33},
+  year={1997},
+  publisher={IEEE}
+}
+
 @article{fukuchi2009focus,
   title={The focus of expansion in optical flow fields acts as a strong cue for visual attention},
   author={Fukuchi, Masaki and Tsuchiya, Naotsugu and Koch, Christof},
@@ -18,8 +29,14 @@
   organization={IEEE}
 }
 
+@article{dragan2013generating,
+  title={Generating legible motion},
+  author={Dragan, Anca and Srinivasa, Siddhartha},
+  publisher={Carnegie Mellon University}
+}
+
 @inproceedings{nikolaidis2016based,
-  title={based legibility optimization},
+  title={Viewpoint-based legibility optimization},
   author={Nikolaidis, Stefanos and Dragan, Anca and Srinivasa, Siddhartha},
   booktitle={2016 11th ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
   pages={271--278},
