--- a/docs/iros2024/sections/related_work.tex
+++ b/docs/iros2024/sections/related_work.tex
@@ -10,3 +10,7 @@ Zheng et al. \cite{PAT2021IJSR} demonstrated a significant difference in how hum
 * Of course, we all are aware of how signaling lights are used in vehicles to show other people our intentions, there are also other modalities to communicate the intent can be used for example in IAN by Dugas et al. \cite{dugas2020_IAN} a Pepper robot uses hand gestures and nudges to communicate with the people around it and ask them to clear the way. 
 
 * \cite{fukuchi2009focus}
+
+\textbf{Learning-based} approaches have also been used to generate legible motions.
+In SLOT-V \cite{XXX} the authors present a method that takes labeled robot trajectories and learns an observer model, using a deep neural network as a value function approximator.
+However, assuming that the robot has access to a labeled dataset of legible trajectories is not always realistic.
